added more page and filed to display the specific data

--- a/stock-watchlist/src/index.css
+++ b/stock-watchlist/src/index.css
@@ -1,7 +1,7 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    background-color: black;
+    background-color: rgb(159, 80, 138);
     color: white;
     padding: 15px;
     font-size: 2em;
@@ -11,3 +11,6 @@
     color: white;
     text-decoration: none;
   }
+ body{
+    background-color: rgb(245, 206, 219);
+ }
